--- a/content/data/config.json
+++ b/content/data/config.json
@@ -53,5 +53,6 @@
                 "new_window": true
             }
         ]
-    }
+    },
+    "domain": "https://fierce-neptune-da69c.netlify.app"
 }
