--- a/content/data/config.json
+++ b/content/data/config.json
@@ -20,6 +20,13 @@
             {
                 "label": "Ipsum",
                 "url": "/ipsum/"
+            },
+            {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
             }
         ]
     },
