config.json: updated url in nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
             },
             {
                 "label": "Ipsum",
-                "url": "/ipsum/"
+                "url": "/ipsum/cat"
             }
         ]
     },
