config.json: updated title

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit Vanilla Theme",
+    "title": "La blockchain",
     "path_prefix": "/",
     "header": {
         "title": "Stackbit Vanilla",
