config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "title": "La blockchain",
     "path_prefix": "/",
     "header": {
-        "title": "Stackbit Vanilla",
+        "title": "La Blockchain",
         "has_nav": true,
         "nav_links": [
             {
